--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - assets/images/logo.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
@@ -61,12 +63,11 @@ flutter:
   uses-material-design: true
 
   # Need to define this to use assets files:
-  assets:
-     - assets/images/
-
+  
+    
 
     #  defining fonts:
-fonts:
+  fonts:
     - family: Lexend-Bold
       fonts:
         - asset: assets/fonts/Lexend-Bold.ttf
