--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^2.8.0      # initialize Firebase
-  cloud_firestore: ^4.6.0    # Firestore database
-  #firebase_auth: ^4.4.0      # Authentication
+  firebase_core: ^3.14.0      # initialize Firebase
+  cloud_firestore: ^5.6.9    # Firestore database
+  firebase_auth: ^5.6.0      # Authentication
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
