--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,8 @@ dependencies:
     sdk: flutter
   firebase_core: ^3.14.0      # initialize Firebase
   cloud_firestore: ^5.6.9    # Firestore database
-  firebase_auth: ^5.6.0      # Authentication
+  firebase_auth: ^5.6.0  
+  google_fonts: ^6.1.0    # Authentication
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
