--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,24 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
-    sdk: flutter   
-  firebase_core: ^3.14.0      # initialize Firebase
-  cloud_firestore: ^5.6.9    # Firestore database
-  firebase_auth: ^5.6.0  
-  google_fonts: ^6.1.0    # Authentication
-  intl: ^0.18.0
+    sdk: flutter
+
+  # Firebase packages (stable and compatible set)
+  firebase_core: ^2.27.0
+  firebase_auth: ^4.17.0
+  cloud_firestore: ^4.17.5
+  firebase_storage: ^11.6.0
+  intl: ^0.19.0
+  
+
+  # Extras
+  image_picker: ^1.1.1
+  file_picker: ^6.2.0 
+  url_launcher: ^6.1.10
+  mime: ^1.0.4
+  path: ^1.8.3
+
+  google_fonts: ^6.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
